--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,13 +22,10 @@
       "@/*": ["./*"]
     }
   },
-  "include": [
+ "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    ".next/dev/types/**/*.ts",
-    "**/*.mts"
+    "**/*.tsx"
   ],
   "exclude": ["node_modules"]
 }
